Fix the test issue with writing files